# junos-confparse

./: LICENSE  README.md  address-book-example.txt  junos-confparse.cabal
app/: Main.hs
src/: Lib.hs
