name:                junos-confparse
version:             0.1.0.0
synopsis:            Configuration parser for JUNOS SRX Config files
description:         Please see README.md
homepage:            http://github.com/AlainODea-haskell/junos-confparse#readme
license:             BSD3
license-file:        LICENSE
author:              Alain O'Dea
maintainer:          alain.odea@gmail.com
copyright:           2016 Alain O'Dea
category:            Text, Parsing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       attoparsec
                     , base >= 4.7 && < 5
                     , text >= 1.2.2.1
                     , unordered-containers
                     , containers
  default-language:    Haskell2010

executable junos-confparse-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       attoparsec
                     , base
                     , junos-confparse
                     , text >= 1.2.2.1
                     , unordered-containers
                     , containers
  default-language:    Haskell2010

test-suite junos-confparse-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       attoparsec
                     , base
                     , junos-confparse
                     , text >= 1.2.2.1
                     , unordered-containers
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AlainODea-haskell/junos-confparse
